Add Java 11 compatibility Bump to 1.1.0-beta.4